@@ -121,6 +121,7 @@ static void common_copy (struct ReportCommon **common, struct thread_Settings *i
     (*common)->RXbinsize =inSettings->mRXbinsize;
     (*common)->RXunits =inSettings->mRXunits;
     (*common)->pktIPG =inSettings->mBurstIPG;
+    (*common)->rtt_weight =inSettings->rtt_nearcongest_divider;
 }
 
 static void free_common_copy (struct ReportCommon *common) {
